# serde-version

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Design.md  README.md  README.md.tpl
.travis/scripts/: cargo_publish.sh  generate_readme.sh
manual/: book.toml
manual/src/: SUMMARY.md  overview.md  unsupported_features.md
manual/src/guide/: deriving_deserialize_versioned.md  index.md  versioned_groups.md  versioned_types.md
serde-version/: Cargo.toml
serde-version/examples/: versioned_groups.rs  versioned_types.rs
serde-version/examples/common/: mod.rs
serde-version/src/: deserializer.rs  exports.rs  lib.rs  seed.rs  toml.rs  utils.rs  version_group.rs  version_map.rs  visitor.rs
serde-version/src/version_groups/: macros.rs  mod.rs  resolver.rs  uri.rs
serde-version/tests/: common.rs  test_de.rs  test_toml.rs  test_version_group.rs
serde-version/tests/common/: mod.rs
serde-version/tests/toml/: mod.rs
serde_version_derive/: Cargo.toml
serde_version_derive/src/: ast.rs  lib.rs  util.rs
serde_version_derive/src/de/: mod.rs
src/: lib.rs
tests/: test_de.rs
