[package]
name = "serde-version"
version = "0.4.2"
authors = ["Frédéric Vauchelles <frederic.vauchelles@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Versioning support for Serde"
homepage = "https://github.com/fredpointzero/serde-version"
repository = "https://github.com/fredpointzero/serde-version"
keywords = ["serde", "version", "serialization"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]

[badges]
travis-ci = { repository = "fredpointzero/serde-version" }

[dependencies]
serde = "^1.0.0"
failure = "^0.1.0"
serde_version_derive = { version = "0.4.2", optional = true, path = "../serde_version_derive" }
type-name = "0.1.0"
toml = { version = "^0.5.0", optional = true }
ron = { version = "^0.5.0", optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
serde_version_derive = { version = "0.4.2", path = "../serde_version_derive" }
serde = { version = "^1.0.0", features = ["derive"] }
ron = "^0.5.0"
serde_test = "^1.0.0"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[features]
default = []
derive = ["serde_version_derive"]
toml-support = ["toml"]
