[package]
name = "serde_version_derive"
version = "0.5.1"
authors = ["Frédéric Vauchelles <frederic.vauchelles@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Versioning support for Serde"
homepage = "https://github.com/fredericvauchelles/serde-version"
repository = "https://github.com/fredericvauchelles/serde-version"
keywords = ["serde", "version", "serialization"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2021"

[lib]
name = "serde_version_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit"] }
proc-macro-util = "^0.1.0"
